Primeros pasos en el controlador de usuarios

--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -1,13 +1,17 @@
 <%%= simple_form_for(@<%= singular_table_name %>) do |f| %>
-  <%%= f.error_notification %>
+  <fieldset>
+    <%%= f.error_notification %>
+    
+    <%- attributes.each do |attribute| -%>
+      <div class="clearfix">
+        <%%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %> %>
+      </div>
+    <%- end -%>
+    </div>
 
-  <div class="inputs">
-  <%- attributes.each do |attribute| -%>
-    <%%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %> %>
-  <%- end -%>
-  </div>
-
-  <div class="actions">
-    <%%= f.button :submit %>
-  </div>
+    <div class="actions">
+      <%%= f.button :submit, 'Guardar', class: 'btn primary' %>
+      <%%= link_to 'Cancelar', <%= plural_table_name %>_path, :class => "btn" %>
+    </div>
+  </fieldset>
 <%% end %>
