--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -4,12 +4,12 @@
   </div>
 
   <div class="well">
-    <%= link_to 'Agregar', new_usuario_path, :class => 'btn primary' %>
+    <%= link_to 'Agregar', new_usuario_path, :class => 'btn btn-primary' %>
   </div>
   <br />
 
   <% if @usuarios.present? %>
-    <table class="zebra-striped">
+    <table class="table table-striped table-bordered table-condensed">
       <tr>
               <th>Nombres</th>
               <th>Apellidos</th>
@@ -27,7 +27,15 @@
                       <td><%= usuario.ente_id %></td>
                       <td><%= usuario.rol_id %></td>
                     <td>
-            <%= link_to 'Editar', edit_usuario_path(usuario) %>
+            
+            <div class="btn-group">              
+              <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
+              <ul id="menu1" class="dropdown-menu">
+                <li><%= link_to '<i class="icon-pencil"></i> Editar'.html_safe, edit_usuario_path(usuario) %></li>
+                <li><%= link_to '<i class="icon-trash"></i> Eliminar'.html_safe, usuario, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
+
+              </ul>              
+            </div>
           </td>
         </tr>
       <% end %>
