Pequeño cambio en clases de la tabla

--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -9,7 +9,7 @@
   <br />
 
   <%% if @<%= plural_table_name %>.present? %>
-    <table class="zebra-striped">
+    <table class="table table-striped table-bordered table-condensed">
       <tr>
       <% attributes.each do |attribute| -%>
         <th><%= attribute.human_name %></th>
