--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -26,8 +26,8 @@
             <div class="btn-group">              
               <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
               <ul id="menu1" class="dropdown-menu">
-                <li><%= link_to '<i class="icon-pencil"></i> Editar'.html_safe, edit_<%= singular_table_name %>_path(<%= singular_table_name %>) %></li>
-                <li><%= link_to '<i class="icon-trash"></i> Eliminar'.html_safe, <%= singular_table_name %>, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
+                <li><%%= link_to content_tag(:i, 'Editar', :class => 'icon-pencil'), edit_<%= singular_table_name %>_path(<%= singular_table_name %>) %></li>
+                <li><%%= link_to content_tag(:i, 'Eliminar', :class => 'icon-trash'), <%= singular_table_name %>, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
 
               </ul>              
             </div>
