Configuraciones para que pase las pruebas de usuarios. Se establece idioma a es

--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -8,7 +8,7 @@
 
       <%= f.input :apellidos %>
 
-      <%= f.input :login %>
+      <%= f.input :login, :label => 'Usuario' %>
 
       <%= f.input :email %>
 
