--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,10 @@
     <!-- <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <!--<link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">-->
   </head>
 
   <body>
@@ -82,6 +82,8 @@
           </div><!--/.well -->
         </div><!--/span-->
         <div class="span9">
+          <%= notice %>
+          <%= alert %>
           <%= yield %>
         </div><!--/span-->
       </div><!--/row-->
