--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -31,8 +31,8 @@
             <div class="btn-group">              
               <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
               <ul id="menu1" class="dropdown-menu">
-                <li><%= link_to '<i class="icon-pencil"></i> Editar'.html_safe, edit_usuario_path(usuario) %></li>
-                <li><%= link_to '<i class="icon-trash"></i> Eliminar'.html_safe, usuario, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
+                <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_usuario_path(usuario) %></li>
+                <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), usuario, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
 
               </ul>              
             </div>
