--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -7,7 +7,7 @@
 
 
   <div class="form-actions">
-    <%%= f.button :submit, 'Guardar' :class => 'btn btn-success' %>
+    <%%= f.button :submit, 'Guardar', :class => 'btn btn-success' %>
     <%%= link_to 'Cancelar', <%= plural_table_name %>_path, :class => "btn" %>
   </div>
 <%% end %>
