Entes, Cargos y Tipos de Documentos

--- a/app/views/entes/index.html.erb
+++ b/app/views/entes/index.html.erb
@@ -26,7 +26,7 @@
                       <td><%= ente.nombre %></td>
                       <td><%= ente.apellido %></td>
                       <td><%= ente.documento %></td>
-                      <td><%= ente.tipo_documento %></td>
+                      <td><%= ente.tipo_documento_id %></td>
                       <td><%= ente.direccion %></td>
                       <td><%= ente.telefono %></td>
                       <td><%= ente.territorio_id %></td>
