--- a/app/views/entes/_form.html.erb
+++ b/app/views/entes/_form.html.erb
@@ -1,13 +1,15 @@
 <%= simple_form_for @ente, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.error_notification %>
-  
-    <%= f.input :nombre %>
-    <%= f.input :apellido %>
-    <%= f.input :documento %>
-    <%= f.input :tipo_documento %>
-    <%= f.input :direccion %>
-    <%= f.input :telefono %>
-    <%= f.input :territorio_id %>
+
+  <%= f.input :nombre %>
+  <%= f.input :apellido %>
+  <%= f.input :tipo_documento_id, :collection =>  TipoDocumento.all, :label_method => :nombre, :prompt => '-- Seleccione --' %>
+  <%= f.input :documento %>
+  <%= f.input :direccion %>
+  <%= f.input :telefono %>
+  <%= f.input :cargo_id, :collection =>  Cargo.all, :label_method => :nombre, :prompt => '-- Seleccione --' %>
+  <%#=  select("cargo", "cargo_id", Cargo.all.collect {|p| [ p.nombre, p.id ] }, {:include_blank => 'Elegir...'}) %>
+  <%= f.input :territorio_id %>
 
 
   <div class="form-actions">
