Pequeño cambio en estilo del generador, cambios en show de roles e index de usuarios

--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="well">
-    <%%= link_to 'Agregar', new_<%= singular_table_name %>_path, :class => 'btn btn-primary' %>
+    <%%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_<%= singular_table_name %>_path, :class => 'btn btn-primary' %>
   </div>
   <br />
 
