--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -4,22 +4,21 @@
   </div>
 
   <div class="well">
-    <%= link_to 'Agregar', new_rol_path, :class => 'btn btn-primary' %>
+    <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_rol_path, :class => 'btn btn-primary' %>
   </div>
   <br />
 
   <% if @roles.present? %>
     <table class="table table-striped table-bordered table-condensed">
       <tr>
-              <th>Nombre</th>
-              
+        <th>Nombre</th>
+
         <th></th>
       </tr>
       <% @roles.each do |rol| %>
         <tr>
-                      <td><%= rol.nombre %></td>
-                    <td>
-            
+          <td><%= link_to rol.nombre, rol %></td>
+          <td>
             <div class="btn-group">              
               <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
               <ul id="menu1" class="dropdown-menu">
