--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -1,21 +1,16 @@
 <section>
-  <div class="alert-message notice" style="margin-top:20px;">    
-    <p><%= notice %></p>
-  </div> 
 
   <div class="page-header">
-    <h1>rol</h1>
+    <h1>Rol "<%= @rol.nombre  %>" </h1>
   </div>
 
-   <div class="well">
-    <%= link_to 'Editar', edit_rol_path(@rol), :class => 'btn primary' %>
-    <%= link_to 'Borrar', @rol, confirm: 'Estás seguro?', method: :delete, class: 'btn' %>
-    <%= link_to 'Ver Todos', roles_path, class: 'btn' %>
+  <div class="well">
+    <div class="btn-group">
+      <%= link_to icon_tag('Editar', :class => 'icon-edit icon-white'), edit_rol_path(@rol), :class => 'btn btn-primary' %>
+      <%= link_to icon_tag('Borrar', :class => 'icon-trash icon-white'), @rol, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary' %>
+      <%= link_to icon_tag('Ver Todos', :class => 'icon-arrow-left icon-white'), roles_path, class: 'btn btn-primary' %>
+    </div>
   </div>
 
-      <p>
-      <b>Nombre:</b>
-      <%= @rol.nombre %>
-    </p>
 
-  </section>
+</section>
