--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -11,23 +11,25 @@
   <% if @usuarios.present? %>
     <table class="table table-striped table-bordered table-condensed">
       <tr>
-              <th>Nombres</th>
-              <th>Apellidos</th>
-              <th>Documento</th>
-              <th>Ente</th>
-              <th>Rol</th>
-              
+        <th>Nombre de Usuario</th>
+        <th>Nombres</th>
+        <th>Apellidos</th>
+        <th>Documento</th>
+        <th>Ente</th>
+        <th>Rol</th>
+
         <th></th>
       </tr>
       <% @usuarios.each do |usuario| %>
         <tr>
-                      <td><%= usuario.nombres %></td>
-                      <td><%= usuario.apellidos %></td>
-                      <td><%= usuario.documento %></td>
-                      <td><%= usuario.ente_id %></td>
-                      <td><%= usuario.rol_id %></td>
-                    <td>
-            
+          <td><%= usuario.login %></td>
+          <td><%= usuario.nombres %></td>
+          <td><%= usuario.apellidos %></td>
+          <td><%= usuario.documento %></td>
+          <td><%= usuario.ente_id %></td>
+          <td><%= usuario.rol.nombre %></td>
+          <td>
+
             <div class="btn-group">              
               <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
               <ul id="menu1" class="dropdown-menu">
