--- a/lib/templates/erb/scaffold/show.html.erb
+++ b/lib/templates/erb/scaffold/show.html.erb
@@ -1,16 +1,14 @@
-<section>
-  <div class="alert-message notice" style="margin-top:20px;">    
-    <p><%%= notice %></p>
-  </div> 
-
+<section>  
   <div class="page-header">
-    <h1><%= singular_table_name %></h1>
+    <h1><%= singular_table_name.humanize %></h1>
   </div>
 
    <div class="well">
-    <%%= link_to 'Editar', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn primary' %>
-    <%%= link_to 'Borrar', @<%= singular_table_name %>, confirm: 'Estás seguro?', method: :delete, class: 'btn' %>
-    <%%= link_to 'Ver Todos', <%= index_helper %>_path, class: 'btn' %>
+    <div class="btn-group">
+      <%%= link_to icon_tag('Editar', :class => 'icon-edit icon-white'), edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), :class => 'btn btn-primary' %>
+      <%%= link_to icon_tag('Borrar', :class => 'icon-trash icon-white'), @<%= singular_table_name %>, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary' %>
+      <%%= link_to icon_tag('Ver Todos', :class => 'icon-arrow-left icon-white'), <%= index_helper %>_path, class: 'btn btn-primary' %>
+    </div>
   </div>
 
   <% attributes.each do |attribute| -%>
@@ -18,6 +16,6 @@
       <b><%= attribute.human_name %>:</b>
       <%%= @<%= singular_table_name %>.<%= attribute.name %> %>
     </p>
-
+    
   <% end -%>
 </section>
