--- a/app/views/entes/show.html.erb
+++ b/app/views/entes/show.html.erb
@@ -30,7 +30,7 @@
 
       <p>
       <b>Tipo documento:</b>
-      <%= @ente.tipo_documento_id %>
+      <%= @ente.tipo_documento.nombre %>
     </p>
 
       <p>
