--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,19 +44,30 @@
             <span class="i-bar"></span>
             <span class="i-bar"></span>
           </a>
-          <%= link_to 'GexIP', root_path, :class => 'brand' %>          
+	  <%= link_to 'GexIP', root_path, :class => 'brand' %>          
           <div class="nav-collapse">
-            <% if usuario_signed_in? %>            
-              <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-              </ul>
-              <p class="navbar-text pull-right">
-                Conectado como <%= icon_tag(nil, :class => 'icon-user icon-white') %> <%= link_to current_usuario.login, '#' %> 
-                <%= icon_tag(nil, :class => 'icon-share icon-white') %> <%= link_to 'Salir', logout_path %>
-              </p>
-            <% end %>
+	    <% if usuario_signed_in? %>            
+	      <ul class="nav">
+		<li class="dropdown">
+		  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+		    Administraci&oacute;n
+		    <b class="caret"></b>
+		  </a>
+		  <ul class="dropdown-menu">
+		    <li><%= link_to 'Usuarios',usuarios_path %></li>
+		    <li><%= link_to 'Roles',roles_path %></li>
+		    <li><%= link_to 'Cargos',cargos_path %></li>
+		    <li><%= link_to 'Entes', entes_path %></li>
+
+		  </ul>
+		</li>
+
+	      </ul>
+	      <p class="navbar-text pull-right">
+		Conectado como <%= icon_tag(nil, :class => 'icon-user icon-white') %> <%= link_to current_usuario.login, '#' %> 
+		<%= icon_tag(nil, :class => 'icon-share icon-white') %> <%= link_to 'Salir', logout_path %>
+	      </p>
+	    <% end %>
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -87,19 +98,19 @@
           </div><!--/.well -->
         </div><!--/span-->
         <div class="span9">
-          <% if notice %>
-            <div class="alert alert-success">
-              <p><%= notice %></p>
-            </div>
-          <% end %>
+	  <% if notice %>
+	    <div class="alert alert-success">
+	      <p><%= notice %></p>
+	    </div>
+	  <% end %>
 
-          <% if alert  %>
-            <div class="alert alert-error">
-              <p><%= alert %></p>
-            </div>
-          <% end %>
-          
-          <%= yield %>
+	  <% if alert  %>
+	    <div class="alert alert-error">
+	      <p><%= alert %></p>
+	    </div>
+	  <% end %>
+
+	  <%= yield %>
         </div><!--/span-->
       </div><!--/row-->
 
