--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -17,7 +17,7 @@
       </tr>
       <% @roles.each do |rol| %>
         <tr>
-                      <td><%= rol.nombre %></td>
+                      <td><%= link_to rol.nombre, rol %></td>
                     <td>
             
             <div class="btn-group">              
