Actualizaciones en Pais y Ciudad, se agrego en el menu admin pais

--- a/app/views/ciudades/_form.html.erb
+++ b/app/views/ciudades/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
   
     <%= f.input :nombre %>
-    <%= f.input :territorio_id, :label => "País", :collection => Pais.all, :label_method => :nombre, :prompt => "-seleccionar-" %>
+    <%= f.input :territorio_id, :label => "País", :collection => Pais.all, :label_method => :nombre, :prompt => "--seleccionar--" %>
 
 
   <div class="form-actions">
