--- a/app/views/ciudades/index.html.erb
+++ b/app/views/ciudades/index.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Ciudades <small>Lista de ciudades</small></h1>
+    <h1>Ciudades <small>Ciudades disponibles</small></h1>
   </div>
 
   <div class="well">
