--- a/app/views/paises/index.html.erb
+++ b/app/views/paises/index.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Paises <small>Lista de paises</small></h1>
+    <h1>Países <small>Países disponibles</small></h1>
   </div>
 
   <div class="well">
