--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,7 @@
 		    <li><%= link_to 'Roles',roles_path %></li>
 		    <li><%= link_to 'Cargos',cargos_path %></li>
 		    <li><%= link_to 'Entes', entes_path %></li>
+		    <li><%= link_to 'Paises', paises_path %></li>
 
 		  </ul>
 		</li>
