--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -1,8 +1,23 @@
+<% ant = '' %>
 <%= simple_form_for @rol, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.error_notification %>
-  
-    <%= f.input :nombre %>
 
+  <%= f.input :nombre %>
+  
+  <fieldset>
+    <legend>Permisos</legend>    
+      <% @permisos.each do |permiso| %>
+        <% if ant != permiso.controlador.humanize  %>
+          <% if ant != '' %>
+          </div>
+          <hr />
+          <% end %>
+          <div class="row">
+          <h4><%= ant = permiso.controlador.humanize %></h4>
+        <% end %>
+        <div class="span4"><%= check_box_tag "permiso_id_#{permiso.id}", permiso.id, @permisos_actuales.include?(permiso), :name => "permisos[]" %> <%= permiso.descripcion %></div>
+      <% end %>    
+  </fieldset>  
 
   <div class="form-actions">
     <%= f.button :submit, 'Guardar', :class => 'btn btn-success' %>
