modificado entes, se quito restriccion en apellido, y se agrego el selector de ciudad

--- a/app/views/entes/_form.html.erb
+++ b/app/views/entes/_form.html.erb
@@ -9,7 +9,8 @@
   <%= f.input :telefono %>
   <%= f.input :cargo_id, :collection =>  Cargo.all, :label_method => :nombre, :prompt => '-- Seleccione --' %>
   <%#=  select("cargo", "cargo_id", Cargo.all.collect {|p| [ p.nombre, p.id ] }, {:include_blank => 'Elegir...'}) %>
-  <%= f.input :territorio_id %>
+  <%#= f.input :territorio_id %>
+  <%= f.input :territorio_id, :label => "Ciudad", :collection => Ciudad.all, :label_method => :nombre, :prompt => "-- Seleccione --" %>
 
 
   <div class="form-actions">
