--- a/app/views/entes/index.html.erb
+++ b/app/views/entes/index.html.erb
@@ -1,10 +1,10 @@
 <section>
   <div class="page-header">
-    <h1>Entes <small>Lista de entes</small></h1>
+    <h1>Entes <small>Entes disponibles</small></h1>
   </div>
 
   <div class="well">
-    <%= link_to 'Agregar', new_ente_path, :class => 'btn btn-primary' %>
+    <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_ente_path, :class => 'btn btn-primary' %>
   </div>
   <br />
 
@@ -17,7 +17,7 @@
               <th>Tipo documento</th>
               <th>Direccion</th>
               <th>Telefono</th>
-              <th>Territorio</th>
+              <th>Ciudad</th>
               
         <th></th>
       </tr>
@@ -29,7 +29,7 @@
                       <td><%= ente.tipo_documento.nombre %></td>
                       <td><%= ente.direccion %></td>
                       <td><%= ente.telefono %></td>
-                      <td><%= ente.territorio_id %></td>
+                      <td><%= ente.ciudad.nombre %></td>
                     <td>
             
             <div class="btn-group">              
