--- a/app/views/entes/index.html.erb
+++ b/app/views/entes/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="well">
-    <%= link_to 'Agregar', new_ente_path, :class => 'btn btn-primary' %>
+    <%= link_to icon_tag('Agregar', :class => 'icon-plus-sign icon-white'), new_ente_path, :class => 'btn btn-primary' %>
   </div>
   <br />
 
