Modifico el estilo de la acción denegado

--- a/app/views/usuarios/denegado.html.erb
+++ b/app/views/usuarios/denegado.html.erb
@@ -1,1 +1,13 @@
-Permiso denegado
+<div class="page-header">
+  <h1>Permiso denegado</h1>
+</div>
+
+<div class="row">
+  <div class="span4">&nbsp;</div>
+  <div class="span4"><%= image_tag 'access_denied.png' %></div>
+</div>
+
+<div class="row">
+  <div class="span4">&nbsp;</div>  
+  <div class="span10 well" style="text-align: center;"><strong>Lo lamentamos, usted no posee los permisos requeridos para acceder al recurso solicitado</strong></div>  
+</div>
