Agregado Serieproceso, Macroproceso, Proceso

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,9 +95,9 @@
               <li><a href="#">Link</a></li>
               <li><a href="#">Link</a></li>
               <li><a href="#">Link</a></li>
-              <li class="nav-header">Sidebar</li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
+              <li class="nav-header">Procesos</li>
+              <li><%= link_to 'Macroprocesos', macroprocesos_path %></li>
+              <li><%= link_to 'Procesos', procesos_path %></li>
               <li><a href="#">Link</a></li>
             </ul>
           </div><!--/.well -->
