macroproceso proceso, agrego subproceso

--- a/app/views/macroprocesos/_form.html.erb
+++ b/app/views/macroprocesos/_form.html.erb
@@ -2,11 +2,10 @@
   <%= f.error_notification %>
   
     <%= f.input :nombre %>
-    <%= f.input :clasificacion %>
-    <%= f.input :objetivo %>
+    <%= f.input :clasificacion, :collection => Macroproceso::CLASIFICACIONES.map{|c| [c,c]}, :prompt => "-- Seleccione --" %>
+    <%= f.input :objetivo, :as => :text, :input_html => { :style => 'width:80%;', :rows => 7, :cols => 20  } %>
     <%= f.input :codigo %>
-    <%= f.input :cargo_id, :label => "Cargo", :collection => Cargo.all, :label_method => :nombre, :prompt => "-- Seleccione --" %>
-
+    <%= f.input :cargo_id, :label => "Cargo Responsable", :collection => Cargo.all, :label_method => :nombre, :prompt => "-- Seleccione --" %>
 
   <div class="form-actions">
     <%= f.button :submit, 'Guardar', :class => 'btn btn-success' %>
