--- a/app/views/macroprocesos/index.html.erb
+++ b/app/views/macroprocesos/index.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>MacroProcesos <small>MacroProcesos Disponibles</small></h1>
+    <h1>MacroProcesos <small>Disponibles</small> </h1>
   </div>
 
   <div class="well">
