--- a/app/views/procesos/index.html.erb
+++ b/app/views/procesos/index.html.erb
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Procesos <small>Lista de procesos</small></h1>
+    <h1>Procesos <small>Disponibles</small></h1>
   </div>
 
   <div class="well">
@@ -25,7 +25,7 @@
                       <td><%= proceso.objetivo %></td>
                       <td><%= proceso.codigo %></td>
                       <td><%= proceso.cargo.nombre %></td>
-                      <td><%= proceso.macroproceso.codigo %> <%= proceso.macroproceso.nombre %></td>
+                      <td><%= proceso.macroproceso.codigo_nombre %></td>
                     <td>
             
             <div class="btn-group">              
