Completado MacroProceso, SubProceso, Proceso

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,9 +98,10 @@
               <li><a href="#">Link</a></li>
               <li><a href="#">Link</a></li>
               <li class="nav-header">Procesos</li>
-              <li><%= link_to 'Macroprocesos', macroprocesos_path %></li>
+              <li><%= link_to 'MacroProcesos', macroprocesos_path %></li>
               <li><%= link_to 'Procesos', procesos_path %></li>
-              <li><a href="#">Link</a></li>
+              <li><%= link_to 'SubProcesos', subprocesos_path %></li>
+              <li><a href="#">Procedimientos</a></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
