Agregado el Paginador a Paises, y una definicion en subproceso model

--- a/app/views/paises/index.html.erb
+++ b/app/views/paises/index.html.erb
@@ -31,6 +31,8 @@
         </tr>
       <% end %>
     </table> 
+<%= paginate @paises %>
+
   <% else %>
     <p class="alert-message warning">
       Todavía no hay paises, <%= link_to 'agregar', new_pais_path %>.
