se agregan paginacion en procedimientos y foreing key en procedimientos

--- a/app/views/procedimientos/index.html.erb
+++ b/app/views/procedimientos/index.html.erb
@@ -48,6 +48,7 @@
         </tr>
       <% end %>
     </table> 
+  <%= paginate @procedimientos %>
   <% else %>
     <p class="alert-message warning">
       Todavía no hay procedimientos, <%= link_to 'agregar', new_procedimiento_path %>.
