--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,7 +101,7 @@
               <li><%= link_to 'MacroProcesos', macroprocesos_path %></li>
               <li><%= link_to 'Procesos', procesos_path %></li>
               <li><%= link_to 'SubProcesos', subprocesos_path %></li>
-              <li><a href="#">Procedimientos</a></li>
+              <li><%= link_to 'Procedimientos', procedimientos_path %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
