--- a/app/views/procesos/index.html.erb
+++ b/app/views/procesos/index.html.erb
@@ -25,7 +25,7 @@
                       <td><%= proceso.objetivo %></td>
                       <td><%= proceso.codigo %></td>
                       <td><%= proceso.cargo.nombre %></td>
-                      <td><%#= proceso.macroproceso.codigo_nombre %></td>
+                      <td><%= proceso.macroproceso.codigo_nombre %></td>
                     <td>
             
             <div class="btn-group">              
