--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -1,6 +1,15 @@
 <%= simple_form_for @tarea, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.error_notification %>
 
+  <% if Tarea.tareas_anteriores(params[:actividad_id], @tarea.id).present? %>
+    <div class="control-group integer required">
+      <%= label_tag :ant_id, raw("#{content_tag(:abbr, '*', :title => 'requerido')} Tarea Anterior"), :class => 'integer required' %>
+
+      <div class="controls">
+        <%= f.collection_select :tarea_anterior_id, Tarea.tareas_anteriores(params[:actividad_id], @tarea.id), :id, :nombre, {}, { :class => 'numeric integer required'} %>
+      </div>
+    </div>  
+  <% end %>
   <%= f.input :orden %>
   <%= f.input :nombre %>
   <%= f.input :metodo %>
